# trader_webull

./: .gitignore  Cargo.toml  README.md
src/: config.rs  discord.rs  main.rs  parser.rs  risk.rs  state.rs  types.rs  utils.rs  webull_client.rs
tools/: dump_sources.rs
